--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>OtakuCode</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
     </header>
     <section>
         <main>
-            <form>
+            <form id="inicioSesion">
                 <div id="logo-otakucode">
-                    <img src="" alt="">
+                    <img width="260px" height="260px" src="assets/img/Logo-OtakuCode.png" alt="logo-OtakuCode">
                 </div>
                 <div id="contenedorDatos">
                     <div id="contenedorCorreo">
@@ -41,6 +41,9 @@
                 <div>
                     <p><strong>Si no tienes una cuenta creada </strong><button type="button">Registrate</button></p>
                 </div>
+            </form>
+            <form id="informacionAdicional">
+
             </form>
         </main>
     </section>
