--- a/index.html
+++ b/index.html
@@ -6,47 +6,145 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>OtakuCode</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 </head>
-<body>
+<body class="bg-black">
     <header>
         <h2>OtakuCode</h2>
     </header>
     <section>
         <main>
-            <form id="inicioSesion">
+            <div id="contenedorLogin">
+                <div id="input_parameters">
+             <form id="inicioSesion">
                 <div id="logo-otakucode">
-                    <img width="260px" height="260px" src="assets/img/Logo-OtakuCode.png" alt="logo-OtakuCode">
+                    <img width="220px" height="220px" src="assets/img/Logo-OtakuCode.png" alt="logo-OtakuCode">
                 </div>
                 <div id="contenedorDatos">
-                    <div id="contenedorCorreo">
+                    <div id="contenedorCorreo" class="m-2">
                         <label for="correo">Correo
                             <input type="email"
                              placeholder="example@gmail.com"
-                             id="correo">
+                             id="correo"
+                             class="form-control">
                         </label>
                     </div>
-                    <div id="contenedorContraseña">
+                    <div id="contenedorContraseña" class="m-2">
                         <label for="contraseña">Contraseña
                             <input type="password"
                              placeholder="Ingrese contraseña"
-                             id="contraseña">
+                             id="contraseña"
+                             class="form-control">
                         </label>
                     </div>
                 </div>
-                <button type="submit">Ingresar</button>
+                <button type="submit" class="btn bg-white text-white m-3" id="butonIngresar"><strong>Ingresar</strong></button>
+
+                <h4 class="mb-3">Otras formas de ingreso</h3>
+
                 <div id="proveedoresAdicionales">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <button class="btn bg-danger text-white">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
+                            <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
+                          </svg> Google </button>
+
+                    <button class=" btn bg-primary text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                        <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                      </svg>  Facebook</button>
+    
                 </div>
-                <div>
-                    <p><strong>Si no tienes una cuenta creada </strong><button type="button">Registrate</button></p>
+                <div class="m-2 ">
+                    <p><strong>Si no tienes una cuenta creada </strong><button type="button" class="btn bg-white p-1">Registrate</button></p>
                 </div>
-            </form>
-            <form id="informacionAdicional">
-                <!--  -->
-            </form>
+             </form>
+             </div>
+            </div>
+            <div id="contenedorRegistar" class="text-white">
+                <div class="card-body">
+                    <form id="registroUsuario" class="row g-3">
+                      <h5>Registro de Usuario</h5>
+                      <div class="col-md-6">
+                        <label for="registroEmail" class="form-label">Email</label>
+                        <input
+                          type="email"
+                          class="form-control"
+                          id="registroEmail"
+                          placeholder="name@domain.com"
+                        />
+                      </div>
+                      <div class="col-md-6">
+                        <label for="registroPassword" class="form-label">Password</label>
+                        <input
+                          type="password"
+                          class="form-control"
+                          id="registroPassword"
+                        />
+                      </div>
+                      <div class="col-12">
+                        <button id="btnRegistrar" type="submit" class="btn btn-primary">
+                          Registrar
+                        </button>
+                        <button id="btnVolverRegistro" class="btn btn-danger">
+                          Volver
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                  <h3>Cuéntanos más sobre ti (Opcional)</h3>
+                <form id="informacionAdicional">
+                    <div class="bloques text-center" id="bloque1">
+                        <label for="nombres">Nombres
+                        <input type="text" name="nombres" id="nombres" class="form-control"></label>
+                        <label for="apellidos">Apellidos
+                        <input type="text" name="apellidos" id="apellidos" class="form-control"></label>
+                    </div>
+                    <div class="bloques text-center" id="bloque2">
+                        <label for="celular">N° Celular
+                        <input type="text" name="celular" id="celular" class="form-control"></label>
+                        <label for="edad">Edad
+                        <input type="number" min="0" name="edad" id="edad" class="form-control"></label>
+                        <label for="fechaNacimiento">Fecha de Nacimiento
+                        <input type="date" name="fechaNacimiento" id="fechaNacimiento" class="form-control"></label>
+                    </div>
+                    <div class="bloques m-1" id="bloque3">
+                        <h2>Géneros</h2>
+                        <div id="generos" class="text-center">
+                            <input type="radio" id="femenino" name="genero" value="femenino" >
+                            <label for="femenino">Femenino</label>
+                            <input type="radio" id="masculino" name="genero" value="masculino">
+                            <label for="masculino">Masculino</label>
+                            <input type="radio" id="noDefinido" name="genero" value="noDefinido">
+                            <label for="noDefinido">No Definido</label>
+                            <input type="radio" id="oculto" name="genero" value="oculto">
+                            <label for="oculto">Prefiero no mencionarlo</label>
+                        </div>
+                    </div>
+                    <div class="bloques text-center row" id="bloque4" >
+                        <div id="contenedorPais">
+                            <label for="pais">País
+                            <input type="text" id="pais" name="pais" class="form-control"></label>
+                        </div>
+                        <div id="contenedorCiudad">
+                            <label for="ciudad">Ciudad
+                            <input type="text" id="ciudad" name="ciudad" class="form-control"></label>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </main>
     </section>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
