Ya está la parte de registrar

--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
                 <div id="logo-otakucode">
                     <img width="220px" height="220px" src="assets/img/Logo-OtakuCode.png" alt="logo-OtakuCode">
                 </div>
+                <!-- <div id="alert-login" class="alert alert-danger d-none" role="alert">
+                  Email y contraseña incorrectos.
+                </div>
+                <div id="alert-login-registro" class="alert alert-danger d-none" role="alert">
+                  Email ya se encuentra registrado, favor utilizar otro.
+                </div> -->
                 <div id="contenedorDatos">
                     <div id="contenedorCorreo" class="m-2">
                         <label for="correo">Correo
                             <input type="email"
                              placeholder="example@gmail.com"
-                             id="correo"
+                             id="ingresoCorreo"
                              class="form-control">
                         </label>
                     </div>
@@ -39,12 +45,12 @@
                         <label for="contraseña">Contraseña
                             <input type="password"
                              placeholder="Ingrese contraseña"
-                             id="contraseña"
+                             id="ingresoContraseña"
                              class="form-control">
                         </label>
                     </div>
                 </div>
-                <button type="submit" class="btn bg-white text-white m-3" id="butonIngresar"><strong>Ingresar</strong></button>
+                <button type="submit" class="btn bg-white text-white m-3" id="butonIngresarCorreo"><strong>Ingresar</strong></button>
 
                 <h4 class="mb-3">Otras formas de ingreso</h3>
 
