--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
     </header>
     <section>
         <main>
-            <div id="contenedorLogin">
+            <div id="contenedorLogin" class="d-none">
                 <div id="input_parameters">
              <form id="inicioSesion">
                 <div id="logo-otakucode">
                     <img width="220px" height="220px" src="assets/img/Logo-OtakuCode.png" alt="logo-OtakuCode">
                 </div>
-                <!-- <div id="alert-login" class="alert alert-danger d-none" role="alert">
+                <div id="alert-login" class="alert alert-danger d-none" role="alert">
                   Email y contraseña incorrectos.
                 </div>
                 <div id="alert-login-registro" class="alert alert-danger d-none" role="alert">
                   Email ya se encuentra registrado, favor utilizar otro.
-                </div> -->
+                </div>
                 <div id="contenedorDatos">
                     <div id="contenedorCorreo" class="m-2">
                         <label for="correo">Correo
@@ -55,12 +55,12 @@
                 <h4 class="mb-3">Otras formas de ingreso</h3>
 
                 <div id="proveedoresAdicionales">
-                    <button class="btn bg-danger text-white">
+                    <button id="butonIngresoGoogle" class="btn bg-danger text-white">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google" viewBox="0 0 16 16">
                             <path d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z"/>
                           </svg> Google </button>
 
-                    <button class=" btn bg-primary text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                    <button id="butonIngresoFacebook" class="btn bg-primary text-white"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                       </svg>  Facebook</button>
     
@@ -71,7 +71,7 @@
              </form>
              </div>
             </div>
-            <div id="contenedorRegistar" class="text-white">
+            <div id="contenedorRegistar" class="text-white d-none">
                 <div class="card-body">
                     <form id="registroUsuario" class="row g-3">
                       <h5>Registro de Usuario</h5>
@@ -143,16 +143,22 @@
                     </div>
                 </form>
             </div>
-            <div class="card bg-dark text-white mx-auto" id="contenidoWeb" style="border-radius: 1rem; width: 800px;">
-              <div class="card-body">
+            <div class="card bg-dark text-white mx-auto" id="contenidoWeb" style="border-radius: 1rem; width: 800px; margin-top:20px;">
+              <div class="card-body" style="float:right; margin:0;">
                 <form id="postForm"action="">
                   
                   <h5>Escribe tu mensaje</h5>
                   <label class="form-label" for="postText">Mensaje</label>
                   <div class="form-outline form-white mb-4">
-                    <textarea class="form-control form-control-lg" id="postText" rows="3"></textarea>
+                    <textarea class="form-control form-control-lg bg-dark form-outline-white" id="postText" rows="3"></textarea>
                   </div>
-                  <button id="btnSendPost" class="btn btn-outline-light btn-lg px-5" type="submit">Postear</button>
+                  <div id="opcionesPost">
+                    <button id="btnSendPost" class="btn btn-outline-dark btn-lg px-5" type="submit">Publicar</button>
+                    <div style="float:right">
+                      <button id="btnEditar" class="btn btn-outline-dark bg-primary  px-5" type="submit">Editar</button>
+                      <button id="btnEliminar" class="btn btn-outline-dark bg-danger   px-5" type="submit">Eliminar</button>
+                    </div>
+                  </div>
                 </form>
               </div>
             </div>
