--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
+      </style>      
 </head>
 <body class="bg-black">
     <header>
-        <h2>OtakuCode</h2>
+        <h2 style="font-family:'Mochiy Pop P One', sans-serif;
+        ; font-weight: 900;">OtakuCode</h2>
         <button class="btn m-1" id="btn-CerrarSesion" >Cerrar Sesión</button>
     </header>
     <section>
@@ -170,7 +174,7 @@
           </div>
             
   
-            <div id="informacionPagina" class="bg-black text-white text-center d-1" style="width:60%;">
+            <div id="informacionPagina" class="text-white text-center d-1" style="width:60%;">
               <img src="https://c4.wallpaperflare.com/wallpaper/855/525/214/anime-bangs-checkered-cities-wallpaper-preview.jpg" id="personajes" alt="Personajes del anime en general">
               <h2>OtakuCode...</h2>
               <div style="width:80%; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif " class="text-center" id="texto-pagina">
