--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
   
             <div id="informacionPagina" class=" text-white text-center d-1" >
               <div>
-                <img src="assets/img/NoGameNoLife1.png" id="personajes" alt="Personajes del anime en general">
+                <img src="assets/img/wallpaperbetter.com_1920x1080-8.jpg" id="personajes" alt="Personajes del anime en general">
                 <h2 class="infoOtakuCode">OtakuCode...</h2>
               <div style="width:90%; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif " class="text-center" id="texto-pagina">
                 <p>En OtakuCode podrás encontrar un espacio donde podrá socializarás con muchos otakus que hablarán de diversos animes.    
