ya se puede editar y subir archivosgit add *!

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                       <img width="220px" height="220px" style="margin-left:15px;"src="assets/img/Logo-OtakuCode.png" alt="logo-OtakuCode">
                     </div>
                 <div class="">
-                  <label for="registroNombre" class="form-label">Nombre Completo</label>
+                  <label for="registroNombre" class="form-label full-name-input ">Nombre Completo</label>
                   <input
                     type="text"
                     class="form-control"
@@ -166,14 +166,14 @@
                     id="registroPassword"
                   />
                   </div>
-                <div class="">
+                <!-- <div class="">
                   <label for="registroConfirmacionPassword" class="form-label">Confirmar</label>
                   <input
                     type="password"
                     class="form-control"
                     id="registroConfirmacionPassword"
                   />
-                </div>
+                </div> -->
                 <div id="butonsDeRegistrar"class="col-12 ">
                   <button id="butonRegistrar" type="submit" class="btn btn-primary">
                     Registrar
@@ -255,7 +255,7 @@
                   </form>
               </div> -->
               <div class="row" id="contenidoWeb" style="border-radius: 1rem; margin-top:20px; display: none;">
-                <div id="userProfile" class="card bg-dark text-white col-lg-5 col-md-12 mx-auto d-none">
+                <div id="userProfile" class="card bg-dark text-white col-lg-5 col-md-12 mx-auto ">
 
                   <div id="userInfo" class="my-auto">
 
@@ -291,7 +291,7 @@
                       </button>
                       
                         <button id="btnSavePost" 
-                        class="btn btn-outline-dark bg-primary  px-5" 
+                        class="btn btn-outline-dark bg-primary  px-5 d-none" 
                         type="submit">
                         <i class="bi bi-save"><span class="ms-3">Actualizar</span>
                         </i>
@@ -307,11 +307,11 @@
 
                 
                 </div>
-              </div>
+              <!-- </div> -->
               <div id="postList">
 
               </div>
-        <!-- </div> -->
+        </div>
       </main>
     </section>
     <script
