--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
 
               <div class="card bg-dark text-white mx-auto" id="contenidoWeb" style="border-radius: 1rem; display:none">
-                <div id="userProfile" class="card bg-dark text-white col-lg-5 col-md-12 mx-auto ">
+                <div id="userProfile" class=" bg-dark text-white col-lg-5 col-md-12 mx-auto ">
         
                   <div id="userInfo" class="my-auto">
 
